Content alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
 	margin-top: 60px;
+	margin-bottom: 60px;
 }
 
 .row {
